--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   },
   "homepage": "https://github.com/arisjulio/cognito-jwt-validator-middleware#readme",
   "devDependencies": {
+    "@types/debug": "^4.1.7",
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/jwk-to-pem": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^7.32.0",
@@ -44,7 +46,10 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "debug": "^4.3.2",
     "jsonwebtoken": "^8.5.1",
+    "jwk-to-pem": "^2.0.5",
     "node-cache": "^5.1.2"
   }
 }
